<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/containerDeatil"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_light"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        tools:context=".Add_Paciente">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addpacienteheader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp">

            <TextView
                style="@style/Content_Headline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/header_detalle"
                android:textColor="@color/fonts_base"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnBackDeatl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_stroke"
                android:contentDescription="@string/imgbtn_back"
                android:focusable="true"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:paddingLeft="9dp"
                android:paddingTop="14dp"
                android:paddingRight="9dp"
                android:paddingBottom="14dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/addpacienteheader"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:scaleType="fitXY"
            android:src="@drawable/ic_profiledefault"
            app:shapeAppearance="@style/styleRoundeCornersImage">

        </com.google.android.material.imageview.ShapeableImageView>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileImage"
            android:layout_marginTop="4dp"
            android:layout_centerHorizontal="true"
            android:text="Nombre"
            style="@style/Components_Button"
            android:textColor="@color/fonts_base"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonsCallyMessage"
            android:layout_width="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnMessage"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/button_stroke"
                android:contentDescription="@string/imgbtn_back"
                android:focusable="true"
                android:paddingLeft="9dp"
                android:paddingTop="14dp"
                android:paddingRight="9dp"
                android:paddingBottom="14dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_message"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnCall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/button_stroke"
                android:contentDescription="@string/imgbtn_back"
                android:focusable="true"
                android:layout_marginStart="12dp"
                android:paddingLeft="9dp"
                android:paddingTop="14dp"
                android:paddingRight="9dp"
                android:paddingBottom="14dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_ic_phone"
                app:layout_constraintStart_toEndOf="@+id/btnMessage"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/TagDeatiled"
            style="@style/Tag_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonsCallyMessage"
            android:layout_marginTop="24dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_tag"
            android:paddingLeft="12dp"
            android:paddingTop="2dp"
            android:paddingRight="12dp"
            android:paddingBottom="2dp"
            android:text="Extraccion"
            android:textColor="@color/fonts_base" />

        <TextView
            android:id="@+id/tvHorario"
            style="@style/Content_Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TagDeatiled"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:text="@string/tvHorario_AC"
            android:textColor="@color/fonts_base" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fechayhora"
            android:layout_width="wrap_content"
            android:layout_below="@+id/tvHorario"
            android:layout_marginTop="8dp"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilHorario"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="130dp"
                android:layout_height="46dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="#83C5BE"
                app:hintTextColor="#83C5BE"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconTint="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieHorario"
                    style="@style/Card_Date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:textColorHint="#83C5BE"
                    android:hint="Fecha"
                    android:paddingStart="12sp"
                    android:paddingTop="14sp"
                    android:paddingBottom="14sp"
                    android:textColor="@color/fonts_base" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTime"
                android:layout_width="130dp"
                android:layout_height="46dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toEndOf="@+id/tilHorario"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="24dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="#83C5BE"
                app:hintTextColor="#83C5BE"
                app:hintEnabled="false"
                app:startIconTint="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieTime"
                    style="@style/Card_Date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:textColorHint="#83C5BE"
                    android:hint="Hora"
                    android:paddingStart="12sp"
                    android:paddingTop="14sp"
                    android:paddingBottom="14sp"
                    android:textColor="@color/fonts_base"/>

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvAsuntoCita"
            style="@style/Content_Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fechayhora"
            android:layout_alignParentStart="true"
            android:layout_marginTop="27dp"
            android:text="@string/tvAsunto_AC"
            android:textColor="@color/fonts_base" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAsuntoCita"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAsuntoCita"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="#83C5BE"
            app:counterEnabled="true"
            app:hintEnabled="false"
            app:counterMaxLength="100"
            app:hintTextColor="#83C5BE"
            app:startIconTint="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieAsuntoCita"
                style="@style/Card_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="100dp"
                android:paddingStart="12dp"
                android:textColorHint="#83C5BE"
                android:hint="@string/sinAsunto"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:textColor="@color/fonts_base" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvDetalles"
            style="@style/Content_Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilAsuntoCita"
            android:layout_alignParentStart="true"
            android:layout_marginTop="17dp"
            android:text="@string/tvDetalles_AC"
            android:textColor="@color/fonts_base" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDetalles"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDetalles"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="#83C5BE"
            app:hintEnabled="false"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:hintTextColor="#83C5BE"
            app:startIconTint="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieDetalles"
                style="@style/Card_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="100dp"
                android:textColorHint="#83C5BE"
                android:hint="@string/sinDescripcion"
                android:paddingStart="12dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:textColor="@color/fonts_base" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPrescripcion"
            style="@style/Content_Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilDetalles"
            android:layout_alignParentStart="true"
            android:layout_marginTop="17dp"
            android:text="@string/tvPrescripcion"
            android:textColor="@color/fonts_base" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPrescripcion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPrescripcion"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="#83C5BE"
            app:hintEnabled="false"
            app:counterEnabled="true"
            app:counterMaxLength="200"
            app:hintTextColor="#83C5BE"
            app:startIconTint="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiePrescripcion"
                style="@style/Card_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="139dp"
                android:textColorHint="#83C5BE"
                android:hint="@string/sinPrescripcion"
                android:paddingStart="12dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:textColor="@color/fonts_base" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvIndicaciones"
            style="@style/Content_Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilPrescripcion"
            android:layout_alignParentStart="true"
            android:layout_marginTop="17dp"
            android:text="@string/tvIndicaciones"
            android:textColor="@color/fonts_base" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilIndicacion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvIndicaciones"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="#83C5BE"
            app:hintEnabled="false"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:hintTextColor="#83C5BE"
            app:startIconTint="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieIndicacion"
                style="@style/Card_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="100dp"
                android:textColorHint="#83C5BE"
                android:hint="@string/sinIndicaciones"
                android:paddingStart="12dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:textColor="@color/fonts_base" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPhone"
            style="@style/Content_Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilIndicacion"
            android:layout_alignParentStart="true"
            android:layout_marginTop="17dp"
            android:text="@string/tvPhone"
            android:textColor="@color/fonts_base" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPhone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="#83C5BE"
            app:hintEnabled="false"
            app:counterEnabled="true"
            app:hintTextColor="#83C5BE"
            app:startIconTint="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiePhone"
                style="@style/Card_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:textColorHint="#83C5BE"
                android:hint="@string/sinPhone"
                android:paddingStart="12dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:textColor="@color/fonts_base" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnEdit"
            style="@style/Components_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilPhone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/blue"
            android:paddingStart="36dp"
            android:paddingTop="12dp"
            android:paddingEnd="36dp"
            android:paddingBottom="12dp"
            android:text="@string/btnGuardar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="8dp" />

    </RelativeLayout>

</ScrollView>