<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".fragments.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_light"
        android:paddingStart="36dp"
        android:paddingEnd="36dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profileHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp">

            <TextView
                style="@style/Content_Headline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_profile"
                android:textColor="@color/fonts_base"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_stroke"
                android:contentDescription="@string/addUser_CalendarFragment"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:paddingLeft="12dp"
                android:paddingTop="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/profileHeader"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:scaleType="fitXY"
            android:src="@drawable/ic_profiledefault"
            app:shapeAppearance="@style/styleRoundeCornersImage">

        </com.google.android.material.imageview.ShapeableImageView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileImage"
            android:layout_marginTop="4dp"
            android:layout_centerHorizontal="true"
            android:text="@string/pressImage"
            style="@style/Content_Caption"
            android:textColor="@color/fonts_base"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textColorHint="#83C5BE"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="#83C5BE"
            app:hintTextColor="#83C5BE"
            app:startIconTint="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieNombre"
                style="@style/Components_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:paddingStart="12dp"
                android:textAlignment="center"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:textColor="@color/fonts_base"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCategoria"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tilNombre"
            android:layout_marginTop="8dp">

            <AutoCompleteTextView
                android:id="@+id/actvTag"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/blue_light"
                android:text="Categoria"
                android:textColor="@color/blue"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView5"
            style="@style/Content_Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilCategoria"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp"
            android:text="@string/sobreMi"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilaboutMe"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textColorHint="#83C5BE"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="#83C5BE"
            app:hintTextColor="#83C5BE"
            app:startIconTint="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieaboutMe"
                style="@style/card_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="180dp"
                android:paddingStart="12dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:textColor="@color/fonts_base"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView6"
            style="@style/Content_Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilaboutMe"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp"
            android:text="@string/direccion"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tildireccion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textColorHint="#83C5BE"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="#83C5BE"
            app:hintTextColor="#83C5BE"
            app:startIconTint="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedireccion"
                style="@style/card_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="90dp"
                android:paddingStart="12dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:textColor="@color/fonts_base"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/guardarBtn"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tildireccion"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@color/blue"
            app:backgroundTint="@color/blue"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/guardar"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView8"
            style="@style/Content_Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/guardarBtn"
            android:layout_alignParentStart="true"
            android:layout_marginTop="32dp"
            android:text="@string/sobreMi"
            android:textColor="@color/base_light"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>



</ScrollView>